combine certificate and private key status
