# api/secrets/secret_handler.go
@@ -139,7 +139,7 @@ func (eh *SecretHandler) ChangeComponentSecret(ctx context.Context, appName, env
 	return eh.setSecretKeyValue(ctx, ns, secretObjName, map[string][]byte{partName: []byte(newSecretValue)})
 }
 
-func (eh *SecretHandler) SetComponentExternalDNSSecretData(ctx context.Context, appName, envName, componentName, fqdn string, certificate, privateKey string) error {
+func (eh *SecretHandler) UpdateComponentExternalDNSSecretData(ctx context.Context, appName, envName, componentName, fqdn string, certificate, privateKey string) error {
 	rdList, err := kubequery.GetRadixDeploymentsForEnvironment(ctx, eh.userAccount.RadixClient, appName, envName)
 	if err != nil {
 		return radixhttp.UnexpectedError("Failed to get deployments", err)
@@ -167,11 +167,8 @@ func (eh *SecretHandler) SetComponentExternalDNSSecretData(ctx context.Context, 
 	certificateBytes, privateKeyBytes := []byte(certificate), []byte(privateKey)
 	tlsValidator := eh.getTLSValidatorOrDefault()
 
-	if valid, validationMsgs := tlsValidator.ValidatePrivateKey(privateKeyBytes); !valid {
-		return radixhttp.ValidationError("Private key", strings.Join(validationMsgs, ", "))
-	}
 	if valid, validationMsgs := tlsValidator.ValidateX509Certificate(certificateBytes, privateKeyBytes, fqdn); !valid {
-		return radixhttp.ValidationError("Certificate", strings.Join(validationMsgs, ", "))
+		return radixhttp.ValidationError("TLS", strings.Join(validationMsgs, ", "))
 	}
 
 	ns := operatorutils.GetEnvironmentNamespace(appName, envName)
